--- a/Module1/Surveyform.html
+++ b/Module1/Surveyform.html
@@ -26,6 +26,22 @@
           </select>
         </label>
       </fieldset>
+      <fieldset>Would you recommend freeCodeCamp to a friend? 
+        <label> <input type="radio" name="recommend" value="definitely" />Definitely </label>
+        <label> <input type="radio" name="recommend" value="maybe" />Maybe </label>
+        <label> <input type="radio" name="recommend" value="not sure" />Not Sure </label>
+      </fieldset>
+      <fieldset> What would you like to see improved?
+        <label for="back-end projects"> <input id="back-end projects" type="checkbox" value="back-end projects" />back-end projects </label>
+        <label for="front-end projects"> <input id="front-end projects" type="checkbox" value="front-end projects" />front-end projects </label>
+        <label for="data visualization"> <input id="data visulaization" type="checkbox" value="data visualization"  />data visualization </label>
+      </fieldset>
+      <fieldset> 
+        <label for="comments">Any comments or Suggestions? 
+          <textarea id="comments" name="comments" rows="3" cols="30" placeholder="Enter your comment here..."></textarea>
+        </label>
+      </fieldset>
+      <input type="submit" value="Submit" id="submit"/>
     </form>
   </body>
 </html>
