--- a/Module2/PhotoGallery.html
+++ b/Module2/PhotoGallery.html
@@ -11,15 +11,15 @@
       <h1>css flexbox photo gallery</h1>
     </header>
     <div class="gallery">
-      <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/1.jpg">
-      <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/2.jpg">
-      <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/3.jpg">
-      <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/4.jpg">
-      <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/5.jpg">
-      <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/6.jpg">
-      <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/7.jpg">
-      <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/8.jpg">
-      <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/9.jpg">
+      <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/1.jpg" alt="sleepy">
+      <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/2.jpg" alt="upside-down">
+      <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/3.jpg" alt="serious">
+      <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/4.jpg" alt="under-cover">
+      <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/5.jpg" alt="surprised">
+      <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/6.jpg" alt="twins">
+      <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/7.jpg" alt="looking">
+      <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/8.jpg" alt="headshot">
+      <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/9.jpg" alt="best-friends">
     </div>
-  </body>
+</body>
 </html>
