--- a/Module3/TechnicalDoc.html
+++ b/Module3/TechnicalDoc.html
@@ -5,6 +5,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>FootWear</title>
         <link rel="stylesheet" href="style.css" />  
+        <style>
+            @media (max-width: 600px) {
+                /* Define styles for screens with a maximum width of 600px */
+                body {
+                    font-size: 14px;
+                }
+                /* Add more responsive styles as needed */
+            }
+        </style>
     </head>
     <body>
       <main id="main-doc">
@@ -53,6 +62,15 @@
           <code></code>
           <li></li>
         </section>
+        <nav id="navbar">
+          <header>Nav Bar</header>
+          <a class="nav-link" href="#Intro">Intro</a>
+          <a class="nav-link" href="#What_you_should_already_know">What you should already know</a>
+          <a class="nav-link" href="#JavaScript_and_Java">Javascript and Java</a>
+          <a class="nav-link" href="#Hello_World">Hello World</a>
+          <a class="nav-link" href="#Variables">Variables</a>
+        </nav>
+
       </main>
     </body>
 </html>
