--- a/Module4/LandingPage.html
+++ b/Module4/LandingPage.html
@@ -5,4 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Landing Page</title>
   </head>
+  <body>
+    <main>
+      <header id="header">
+        <img id="header-img" src=""></img>
+        <nav id="nav-bar">
+          <a href="Features" class="nav-link">Features</a>
+          <a href="How it Works" class="nav-link">How it Works</a>
+          <a href="Pricing" class="nav-link">Pricing</a>
+        </nav>
+      </header>
+    </main>
+  </body>
 </html>
