--- a/Module4/LandingPage.html
+++ b/Module4/LandingPage.html
@@ -9,12 +9,22 @@
     <main>
       <header id="header">
         <img id="header-img" src=""></img>
-        <nav id="nav-bar">
-          <a href="Features" class="nav-link">Features</a>
-          <a href="How it Works" class="nav-link">How it Works</a>
-          <a href="Pricing" class="nav-link">Pricing</a>
+        <nav id="nav-bar"  style="position: fixed; top: 0;">
+          <a href="#Features" class="nav-link">Features</a>
+          <a href="#How it Works" class="nav-link">How it Works</a>
+          <a href="#Pricing" class="nav-link">Pricing</a>
         </nav>
       </header>
+       <section id="Features"></section>
+
+      <section id="How-it-Works"></section>
+
+      <section id="Pricing"></section>
+      <video id="video" src=""></video>
+      <form id="form" action="https://www.freecodecamp.com/email-submit">
+        <input id="email" placeholder="Enter your email here" type="email" name="email"></input>
+        <input id="submit" type="submit"></input>
+      </form>
     </main>
   </body>
 </html>
